fix: toList() to colletc